[breaking] completion + test wrting